--- a/vue-admin/src/styles/index.scss
+++ b/vue-admin/src/styles/index.scss
@@ -113,7 +113,7 @@ code {
   }
 }
 
-.warn-content{
+.info-content{
   background: rgba(66,185,131,.1);
   border-radius: 2px;
   padding: 16px;
@@ -125,7 +125,21 @@ code {
     font-weight: 600;
   }
 }
-
+.quill-editor {
+  height: 200px;
+  .ql-container {
+    height: calc(100% - 80px);
+    .ql-tooltip {
+      z-index: 999;
+    }
+  }
+  strong {
+    font-weight: 700;
+  }
+  em {
+    font-style: italic;
+  }
+}
 //main-container全局样式
 .app-container {
   padding: 20px;
