--- a/vue-admin/src/views/dashboard/admin/components/todoList/index.scss
+++ b/vue-admin/src/views/dashboard/admin/components/todoList/index.scss
@@ -11,6 +11,7 @@
   background-color: #fff;
   z-index: 1;
   position: relative;
+  height: 100%;
   button {
     margin: 0;
     padding: 0;
@@ -51,7 +52,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
   .new-todo {
-    padding: 10px 16px 16px 60px;
+    padding: 10px 16px 16px 50px;
     border: none;
     background-color: rgba($color: #000000, $alpha: .03);
     box-shadow: inset 0 -2px 1px rgba($color: #000000, $alpha: .03);
@@ -60,124 +61,228 @@
     position: relative;
     z-index: 2;
     border-top: 1px solid #e6e6e6;
+    .todo-bar {
+      height: 440px;
+      .el-scrollbar__wrap{
+        overflow-x: hidden;
+      }
+      .el-scrollbar__thumb {
+        background-color: rgba($color: #409eff, $alpha: 0.6);
+      }
+    }
   }
   .toggle-all {
     text-align: center;
     border: none;
     opacity: 0;
     position: absolute;
-  }
-  .toggle-all+label {
-    width: 60px;
-    height: 34px;
-    font-size: 0;
-    position: absolute;
-    top: -52px;
-    left: -13px;
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-  }
-  .toggle-all:checked+label:before {
-    color: #737373;
+    &+label {
+      width: 60px;
+      height: 34px;
+      font-size: 0;
+      position: absolute;
+      top: -50px;
+      left: -18px;
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);
+      cursor: pointer;
+      &:before {
+        content: '❯';
+        font-size: 25px;
+        color: #e6e6ee;
+        padding: 10px 27px 10px 27px;
+      }
+    }
+    &:checked+label:before {
+      color: #737373;
+    }
   }
   .todo-list {
     margin: 0;
     padding: 0;
     list-style: none;
-  }
-  .todo-list li {
-    position: relative;
-    font-size: 24px;
-    border-bottom: 1px solid #ededed;
-  }
-  .todo-list li:last-child {
-    border-bottom: none;
-  }
-  .todo-list li.editing {
-    border-bottom: none;
-    padding: 0;
-  }
-  .todo-list li.editing .edit {
-    display: block;
-    width: 506px;
-    padding: 12px 16px;
-    margin: 0 0 0 43px;
-  }
-  .todo-list li.editing .view {
-    display: none;
-  }
-  .todo-list li .toggle {
-    text-align: center;
-    width: 40px;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    border: none;
-    appearance: none;
-    -webkit-appearance: none;
-  }
-  .todo-list li .toggle {
-    opacity: 0;
-  }
-  .todo-list li .toggle+label {
-    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
-    background-repeat: no-repeat;
-    background-position: center left;
-    background-size: 36px;
-  }
-  .todo-list li .toggle:checked+label {
-    background-size: 36px;
-    background-color: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
-  }
-  .todo-list li label {
-    word-break: break-all; // 运行在单词内换行
-    padding: 15px 15px 15px 50px;
-    display: block;
-    line-height: 1;
-    font-size: 14px;
-    transition: color 0.4s;
-  }
-  .todo-list li.completed label {
-    color: #d9d9d9;
-    text-decoration: line-through; // 中间线
-  }
-  .todo-list li .destroy {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 10px;
-    bottom: 0;
-    width: 40px;
-    height: 40px;
-    margin: auto 0;
-    font-size: 30px;
-    color: #cc9a9a;
-    cursor: pointer;
-    transition: color 0.2s ease-out;
-  }
-  .todo-list li .destroy:hover {
-    color: #af5b5e;
-  }
-  .todo-list li .destroy:after {
-    content: 'x';
-  }
-  .todo-list li:hover .destroy {
-    display: block;
-  }
-  .todo-list li .edit {
-    display: none;
-  }
-  .todo-list li.editing:last-child {
-    margin-bottom: -1px;
+    li {
+      position: relative;
+      font-size: 24px;
+      border-bottom: 1px solid #ededed;
+      .editing {
+        border-bottom: none;
+        padding: 0;
+        .edit {
+          display: block;
+          width: 506px;
+          padding: 12px 16px;
+          margin: 0 0 0 43px;
+        }
+        .view {
+          display: none;
+        }
+      }
+      .toggle {
+        text-align: center;
+        width: 40px;
+        height: auto;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto 0;
+        border: none;
+        appearance: none;
+        -webkit-appearance: none;
+        opacity: 0;
+        &+label{
+          background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+          background-repeat: no-repeat;
+          background-position: center left;
+          background-size: 36px;
+
+          word-break: break-all; // 运行在单词内换行
+          padding: 15px 15px 15px 50px;
+          display: block;
+          line-height: 1;
+          font-size: 14px;
+          transition: color 0.4s;
+        }
+        &:checked {
+          & + label {
+            background-size: 36px;
+            background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+            color: #d9d9d9;
+            text-decoration: line-through; // 中间线
+          }
+        }
+      }
+      .destroy {
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 10px;
+        bottom: 0;
+        width: 40px;
+        height: 40px;
+        margin: auto 0;
+        font-size: 30px;
+        color: #cc9a9a;
+        cursor: pointer;
+        transition: color 0.2s ease-out;
+        &:hover {
+          color: #af5b5e;
+        }
+        &:after {
+          content: 'x';
+        }
+      }
+      &:hover {
+        .destroy {
+          display: block;
+        }
+      }
+      .edit {
+        display: none;
+      }
+      .editing{
+        &:last-child {
+          margin-bottom: -1px;
+        }
+      }
+    }
   }
   .footer {
     color: #777;
-    position: relative;
+    position: absolute;
+    width: 100%;
     padding: 10px 15px;
     height: 40px;
     text-align: center;
-    border-top: 1px solid #eae6e6;
+    bottom: 5px;
+    &:before {
+      content: '';
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: 40px;
+      overflow: hidden;
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 
+      0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+    }
+  }
+  .todo-count {
+    float: left;
+    text-align: left;
+    strong {
+      font-weight: 300;
+    }
+  }
+  .filters {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    z-index: 1;
+    list-style: none;
+    li {
+      display: inline;
+      a {
+        color: inherit;
+        font-style: 7px;
+        padding: 3px 7px;
+        text-decoration: none;
+        border: 1px solid transparent;
+        border-radius: 3px;
+        &:hover {
+          border-color: rgba(175, 47, 47, 0.1);
+        }
+        .selected {
+          border-color: rgba(175, 47, 47, 0.2);
+        }
+      }
+    }
+  }
+  .clear-completed,
+  html .clear-completed:active {
+    float: right;
+    position: relative;
+    line-height: 20px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .clear-completed:hover {
+    text-decoration: underline;
+  }
+  .info {
+    margin: 65px auto 0;
+    color: #bfbfbf;
+    font-size: 10px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    text-align: center;
+  }
+  .info p {
+    line-height: 1;
+  }
+  .info a {
+    color: inherit;
+    text-decoration: none;
+    font-weight: 400;
+  }
+  .info a:hover {
+    text-decoration: underline;
+  }
+
+  @media screen and(-webkit-min-device-pixel-ratio: 0){
+    .toggle-all,
+    .toggle-all li .toggle{
+      background: none;
+    }
+    .todo-list li .toggle {
+      height: 40px;
+    }
+  }
+  @media (max-width: 430px) {
+    .footer {
+      height: 50px;
+    }
+    .filters {
+      bottom: 10px;
+    }
   }
 }
